# hldmodding

./: .gitignore  README.md  pyproject.toml
examples/qol/: __init__.py  qol.py
examples/which_room/: __init__.py  which_room.py
src/hldmodding/: __init__.py  hooks.py  memory_controller.py  mini_controllers.py  predef.py  predef_hooks.py  run.py
